# backend

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  docker.sh  test_api.sh  test_control.html
.github/workflows/: ci.yml  deploy_backend.yml
docs/: auth.md  database.md  diary.md  hosting.md  robot.md
migrations/: 20241110000001_create_users_table.sql  20241110000002_create_diary_entries_table.sql  20241124000001_ensure_admin_user.sql  20260125000001_update_roles.sql  20260226000001_rename_admin_email.sql  20260308000001_add_sessions_and_last_sign_on.sql  20260314000001_normalize_timestamps_and_sessions.sql  20260326000001_create_robot_notifications_table.sql
src/: auth.rs  cache.rs  config.rs  database.rs  extractor.rs  lib.rs  logging.rs  main.rs  models.rs
src/auth/: auth.rs  extractor.rs  login.rs  mod.rs  models.rs  roles.rs  security.rs
src/diary/: diary.rs  handlers.rs  login.rs  mod.rs  models.rs
src/notifications/: handlers.rs  models.rs
src/robot/: client_routes.rs  discovery.rs  mod.rs  models.rs  optimization_helper.rs  queue_routes.rs  robot_routes.rs  routes.rs  state.rs
tests/: auth_integration_tests.rs  contract_tests.rs  diary_integration_tests.rs  edge_case_tests.rs  queue_role_tests.rs  robot_integration_tests.rs
tests/common/: mod.rs
