[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.6"
serde = {version="1.0.228", features=["derive"]}
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
jsonwebtoken = "9.3"
bcrypt = "0.15"
tower-http = { version = "0.6", features = ["cors"] }
dotenv = "0.15"
uuid = { version = "1.11", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
async-trait = "0.1"
