[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.6", features = ["ws"] }
serde = {version="1.0.228", features=["derive"]}
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal"] }
futures = "0.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-appender = "0.2"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
jsonwebtoken = "9.3"
bcrypt = "0.15"
tower-http = { version = "0.6", features = ["cors", "trace"] }
dotenv = "0.15"
uuid = { version = "1.11", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
async-trait = "0.1"
reqwest = { version = "0.13.1", features = ["json"] }
md5 = "0.7"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "test-util"] }
wiremock = "0.6"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono", "migrate"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hyper-util = "0.1"
